--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
+    
 </head>
 <body>
-    
-  
-
+<button id="paperBtn">Paper</button>
+<button id="rockBtn">Rock</button>
+<button id="scissorsBtn">scissors</button>
 
 
 
